# matrix-creator-alexa-voice-demo

./: .gitmodules  README.md  alexa_voice_demo.py  auth_web.py  creds.py  requirements.txt  setup.sh
micarray/: CMakeLists.txt  micarray_dump.cpp  off.cpp  rec.cpp
rc/: asoundrc
wakeword/: alexa_wakeword.cpp  alexa_wakeword.h  main.cpp
